Non-tutorial content and navigation layout tweaks

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="home">
+<div class="page-wrapper home">
   <section class="home__posts home__section">
     <h1 class="home__section__title">Posts</h1>
     <ul class="home__posts__post-list">
@@ -25,5 +25,4 @@ layout: default
       {% endfor %}
     </ul>
   </section>
-
 </div>
